// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot with largeViewport 1`] = `
<Headroom
  height={180}
  parent={
    <html>
      <head />
      <body />
    </html>
  }
  pinStart={0}
  scrollHeight={90}
  zIndex={1}
>
  <styled.header>
    <styled.div
      hasTitle={false}
    >
      <HeaderLogo
        link="/random_route"
      />
      <HeaderTitle />
      <styled.nav>
        <HeaderActionItemLink
          href="/random_route"
          iconSrc="icon"
          key="0"
          text="text"
        />
      </styled.nav>
    </styled.div>
    <styled.div>
      <styled.nav>
        <HeaderNavigationItem
          active={true}
          href="/another_route"
          icon="icon.jpg"
          key="0"
          text="text1"
        />
      </styled.nav>
    </styled.div>
  </styled.header>
</Headroom>
`;

exports[`Header should match snapshot with smallViewport 1`] = `
<Headroom
  height={140}
  parent={
    <html>
      <head />
      <body />
    </html>
  }
  pinStart={0}
  scrollHeight={70}
  zIndex={1}
>
  <styled.header>
    <styled.div
      hasTitle={false}
    >
      <HeaderLogo
        link="/random_route"
      />
      <styled.nav>
        <HeaderActionItemLink
          href="/random_route"
          iconSrc="/icon.jpg"
          key="0"
          text="random route"
        />
      </styled.nav>
    </styled.div>
    <styled.div>
      <styled.nav>
        <HeaderNavigationItem
          active={true}
          href="/another_route"
          icon="icon.jpg"
          key="0"
          text="text1"
        />
      </styled.nav>
    </styled.div>
  </styled.header>
</Headroom>
`;
